// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`yes-version-yes-tabs > gets all urls from docs config 1`] = `
[
  "docs/api/tab-1",
  "docs/api/tab-1/section-1/page-1",
  "docs/api/page-2",
  "docs/api/section-2",
  "docs/api/tab-1/section-2/page-4",
  "docs/api/tab-1/page-5",
  "docs/api/tab-2/page-7",
  "docs/api/tab-2/page-8",
  "docs/api/tab-2/section-5/page-10",
  "docs/api/version-1/tab-1",
  "docs/api/version-1/tab-1/section-1/page-1",
  "docs/api/version-1/page-2",
  "docs/api/version-1/section-2",
  "docs/api/version-1/tab-1/section-2/page-4",
  "docs/api/version-1/tab-1/page-5",
  "docs/api/version-1/tab-2/page-7",
  "docs/api/version-1/tab-2/page-8",
  "docs/api/version-1/tab-2/section-5/page-10",
  "docs/api/version-2/tab-1",
  "docs/api/version-2/tab-1/section-1/page-1",
  "docs/api/version-2/page-2",
  "docs/api/version-2/section-2",
  "docs/api/version-2/tab-1/section-2/page-4",
  "docs/api/version-2/tab-1/page-5",
  "docs/api/version-2/tab-2/page-7",
  "docs/api/version-2/tab-2/page-8",
  "docs/api/version-2/tab-2/section-5/page-10",
]
`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api 1`] = `
{
  "redirect": "docs/api/tab-1/section-1/page-1",
  "type": "redirect",
}
`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api/tab-1 1`] = `
{
  "canonicalSlug": "docs/api/version-1/tab-1",
  "id": "root..version-1.uv.tab-1.tab-1.section-3.page-6",
  "pageId": "page-6.md",
  "slug": "docs/api/tab-1",
  "title": "Page 6",
  "type": "page",
}
`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api/tab-1 2`] = `"Version 1"`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api/tab-1 3`] = `"docs/api/tab-1"`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api/tab-2 1`] = `
{
  "redirect": "docs/api/tab-2/page-7",
  "type": "redirect",
}
`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api/version-1 1`] = `
{
  "redirect": "docs/api/version-1/tab-1/section-1/page-1",
  "type": "redirect",
}
`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api/version-1/section-2 1`] = `
{
  "audience": undefined,
  "authed": undefined,
  "canonicalSlug": undefined,
  "hidden": undefined,
  "icon": undefined,
  "id": "root..version-1.uv.tab-1.tab-1.section-2.page-3",
  "noindex": undefined,
  "pageId": "page-3.md",
  "slug": "docs/api/version-1/section-2",
  "title": "Page 3",
  "type": "page",
}
`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api/version-1/section-2 2`] = `"Version 1"`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api/version-1/section-2 3`] = `"docs/api/version-1/tab-1"`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api/version-2 1`] = `
{
  "redirect": "docs/api/version-2/tab-1/section-1/page-1",
  "type": "redirect",
}
`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api/version-2/tab-2 1`] = `
{
  "redirect": "docs/api/version-2/tab-2/page-7",
  "type": "redirect",
}
`;

exports[`yes-version-yes-tabs > gets navigation root for /docs/api/version-2/tab-2/section-5 1`] = `
{
  "redirect": "docs/api/version-2/tab-1",
  "type": "redirect",
}
`;
